--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
-"hello world" 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tailwind CSS in Vanilla HTML!</title>
+    <link rel="stylesheet" href="tailwind.css" />
+  </head>
+  <body>
+    <div class="flex min-h-screen flex-col items-center justify-center py-2">
+
+        <main class="flex w-full flex-1 flex-col items-center justify-center px-20 text-center">
+  
+          <h1 class="text-6xl font-bold">
+            Welcome to
+            <a class="text-blue-600">
+              Bot Shop !
+            </a>
+          </h1>
+  
+          <p class="mt-3 text-2xl">
+            Need a Telegram bot for your community? Fill out this form:
+         
+          </p>
+            <div class="flex flex-col bg-red">
+                <form action="https://formsubmit.co/your@email.com" method="POST">
+                    <input class="" type="text" name="name" required>
+                    <input type="email" name="email" required>
+                    <button type="submit">Send</button>
+               </form>
+            </div>
+          <div class="mt-6 flex max-w-4xl flex-wrap items-center justify-around sm:w-full">
+  
+            <p class="hidden">“Attention bot shoppers! Take advantage of our penny bot sale! If you buy one piece of bot at the regular price, you get another piece of bot of equal or lesser value for only a penny! Try and beat bot for a penny! If you can find cheaper bot anywhere else, fuck it!</p>
+  
+          </div>
+        </main>
+  
+        <footer class="flex h-24 w-full items-center justify-center border-t">
+        © Underpants Gnomes Inc.
+        </footer>
+      </div>
+  </body>
+</html>
