--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             Need a Telegram bot for your community? Fill out this form:
          
           </p>
-            <div class="flex flex-col bg-red">
-                <form action="https://formsubmit.co/your@email.com" method="POST">
+            <div class="bg-red">
+                <form class="flex flex-col" action="https://formsubmit.co/botshop@mailbox.org" method="POST">
                     <input class="" type="text" name="name" required>
                     <input type="email" name="email" required>
                     <button type="submit">Send</button>
