--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
          
           </p>
             <div class="bg-red">
-                <form class="flex flex-col" action="https://formsubmit.co/botshop@mailbox.org" method="POST">
+                <form action="https://formsubmit.co/botshop@mailbox.org" method="POST">
                     <input class="" type="text" name="name" required>
                     <input type="email" name="email" required>
                     <button type="submit">Send</button>
