--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>BotShop</title>
         <link rel="stylesheet" href="tailwind.css" />
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="//fonts.googleapis.com">
+        <link rel="preconnect" href="//fonts.gstatic.com" crossorigin>
+        <link href="//fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet">
     </head>
 
     <body>
