--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         days at the latest.
                     </p>
                 </div>
-                <form class="" action="https://formsubmit.co/botshop@mailbox.org" method="POST" id="projectform">
+                <form class="" action="https://formsubmit.co/botshop@mailbox.org" method="POST">
                     <div class="flex justify-center"><input class="w-full h-16 text-2xl rounded p-4" type="text" name="name" placeholder="name" required></div>
                     <div class="flex justify-center"><input class="w-full h-16 text-2xl rounded p-4 mt-4" type="email" name="email" placeholder="email" required></div>
                     <div class="flex justify-center"><textarea class="w-full h-60 text-2xl rounded p-4 resize-y border mt-4" name="project-description" placeholder="Describe your project !" required></textarea></div>
