--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="flex flex-col font-jost items-center min-h-screen bg-zinc-200 font-sans">
 
 
-            <div class="flex w-full text-center pt-16 pb-16">
+            <div class="flex flex-col items-center w-full text-center pt-16 pb-16">
                 <h1 class="font-silk text-6xl">Welcome to BotShop!</h1>
                 <!--<h2 class="text-3xl">Custom Telegram Bots for your community !</h2>-->
             </div>
@@ -40,7 +40,7 @@
 
             <div class="flex flex-col items-center w-full mb-16">
                 <div class="w-5/6 pt-16 pb-16 text-center">
-                    <h2 class="text-3xl">Tell us about your idea !</h2>
+                    <h2 class="text-3xl">Tell us about your idea!</h2>
                     <p class="text-xl pt-8">
                         Try to give a precise description. 
                         Not too short and not too long. 
@@ -48,11 +48,22 @@
                         days at the latest.
                     </p>
                 </div>
-                <form class="" action="https://formsubmit.co/botshop@mailbox.org" method="POST">
-                    <div class="flex justify-center"><input class="w-full h-16 text-2xl rounded p-4" type="text" name="name" placeholder="name" required></div>
-                    <div class="flex justify-center"><input class="w-full h-16 text-2xl rounded p-4 mt-4" type="email" name="email" placeholder="email" required></div>
-                    <div class="flex justify-center"><textarea class="w-full h-60 text-2xl rounded p-4 resize-y border mt-4" name="project-description" placeholder="Describe your project !" required></textarea></div>
-                    <div class="flex justify-center"><button class="w-full h-16 rounded bg-slate-900 text-slate-100 text-2xl mt-8" type="submit">Send your message !</button></div>
+
+                <form class="w-full" action="https://formsubmit.co/botshop@mailbox.org" method="POST" id="projectform">
+                    <div class="flex w-full justify-center">
+                        <input class="w-5/6 h-16 text-xl rounded p-4" type="text" name="name" placeholder="name" required>
+                    </div>
+                    <div class="flex justify-center">
+                        <input class="w-5/6 h-16 text-xl rounded p-4 mt-4" type="email" name="email" placeholder="email" required>
+                    </div>
+                    <div class="flex justify-center">
+                        <textarea class="w-5/6 h-60 text-xl rounded p-4 resize-y border mt-4" name="project-description" placeholder="Describe your project !" required></textarea>
+                    </div>
+                    <div class="flex justify-center">
+                        <button class="w-5/6 h-16 rounded bg-slate-900 text-slate-100 text-2xl mt-8" type="submit">
+                        Send your message !
+                        </button>
+                    </div>
                 </form>
             </div>
 
