--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                 <form class="w-5/6 md:w-4/6 lg:w-2/6 font-ptsans" action="https://formsubmit.co/botshop@mailbox.org" method="POST" id="projectform">
 
                     <input type="hidden" name="_captcha" value="false">
+                    <input type="hidden" name="_autoresponse" value="Thank you for your request ! It is of utmost importance to us to offer our customers the best possible service. We will therefore get back to you shortly; at the latest, however, after three working days. Please understand that we may have to decline your request due to high demand.">
 
-                    
                     <div class="flex w-full justify-center">
                         <input class="w-full h-14 text-xl rounded p-4" type="text" name="name" placeholder="name" required>
                     </div>
