--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
             
 
-            <div class="flex flex-col justify-center items-center w-full md:h-80 font-jost text-center text-slate-50 pt-16 pb-16 lg:pt-32 lg:pb-32 bg-orange-400">
+            <div class="flex flex-col justify-center items-center w-full md:h-80 font-jost text-left text-slate-50 pt-16 pb-16 lg:pt-32 lg:pb-32 bg-orange-400">
                     <h2 class="w-5/6 md:w-4/6 lg:w-3/6 text-4xl md:text-5xl lg:text-6xl">
-                        Bots for Telegram and Discord<br>- 
+                        Bots for Telegram and Discord - 
                         made in Germany and made to measure !
                     </h2>
                 <!--<h2 class="text-3xl">Custom Telegram Bots for your community !</h2>-->
@@ -57,7 +57,7 @@
 
 
 
-            <div class="flex flex-col items-center w-full mb-16">
+            <div class="flex flex-col items-center w-full ">
 
                 <div class="w-5/6 md:w-4/6 lg:w-2/6 pt-14 pb-14 lg:pt-24 lg:pb-20">
 
@@ -74,7 +74,12 @@
 
                 </div>
 
-                <form class="w-5/6 md:w-4/6 lg:w-2/6 font-ptsans" action="https://formsubmit.co/botshop@mailbox.org" method="POST" id="projectform">
+            </div>
+
+            <div class="flex flex-col items-center w-full mb-16 pt-14 pb-14 bg-slate-400">
+                <h2 class="text-3xl md:text-4xl lg:text-5xl">Contact Form</h2>
+
+                <form class="w-5/6 pt-2  md:w-4/6 lg:w-2/6 font-ptsans" action="https://formsubmit.co/botshop@mailbox.org" method="POST" id="projectform">
 
                     <!--<input type="hidden" name="_captcha" value="false">-->
                     <input type="hidden" name="_autoresponse" value="Thank you for your request ! It is of utmost importance to us to offer our customers the best possible service. We will therefore get back to you shortly; at the latest, however, after three working days. Please understand that we may have to decline your request due to high demand.">
@@ -98,8 +103,6 @@
                     </div>
                 </form>
             </div>
-
-
         
             <footer class="flex h-24 w-full items-center justify-center text-zinc-400 border-t border-zinc-300">
                 © 2IsCompany 2022
