--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
 
             </div>
 
-            <div class="flex flex-col items-center w-full mb-16 pt-14 pb-14 bg-slate-400">
+            <div class="flex flex-col items-center w-full pt-14 pb-14 lg:pt-24 lg:pb-24 bg-slate-300">
                 <h2 class="text-3xl md:text-4xl lg:text-5xl">Contact Form</h2>
 
-                <form class="w-5/6 pt-2  md:w-4/6 lg:w-2/6 font-ptsans" action="https://formsubmit.co/botshop@mailbox.org" method="POST" id="projectform">
+                <form class="w-5/6 pt-4 lg:pt-6 md:w-4/6 lg:w-2/6 font-ptsans" action="https://formsubmit.co/botshop@mailbox.org" method="POST" id="projectform">
 
                     <!--<input type="hidden" name="_captcha" value="false">-->
                     <input type="hidden" name="_autoresponse" value="Thank you for your request ! It is of utmost importance to us to offer our customers the best possible service. We will therefore get back to you shortly; at the latest, however, after three working days. Please understand that we may have to decline your request due to high demand.">
@@ -104,7 +104,7 @@
                 </form>
             </div>
         
-            <footer class="flex h-24 w-full items-center justify-center text-zinc-400 border-t border-zinc-300">
+            <footer class="flex h-24 w-full items-center justify-center text-zinc-400">
                 © 2IsCompany 2022
             </footer>
           
