--- a/index.html
+++ b/index.html
@@ -47,10 +47,13 @@
                 <h2 class="w-5/6 text-4xl md:text-5xl lg:text-6xl">
                     Our Promise:
                 </h2>
-                <ul class="list-disc list-inside font-ptsans text-xl md:text-2xl lg:text-3xl pt-2">
-                    <li class="">fair and flexible pricing</li>
-                    <li class="pt-2">high quality</li>
-                    <li class="pt-2">short waiting times</li>
+                <ul class="w-5/6 list-inside font-ptsans text-xl md:text-2xl lg:text-3xl pt-2">
+                    <li class="pt-4"><b>fair and flexible pricing:</b><br>Depending on the work involved, payment is made as a lump sum or we charge by the hour. We find the deal that suits you best.
+                    </li>
+                    <li class="pt-4"><b>highest quality:</b><br>
+                        We do not deliver anything that does not meet our own and your requirements.
+                    </li>
+                    <li class="pt-4"><b>hort development times:</b><br>Our proven tools allow us to bring your project up quickly.</li>
                 </ul>
             <!--<h2 class="text-3xl">Custom Telegram Bots for your community !</h2>-->
             </div>                
@@ -66,7 +69,6 @@
                     </h2>
 
                     <p class="font-ptsans text-xl md:text-2xl pt-2 lg:pt-6">
-                        Please tell us about your idea. 
                         Keep your description as precise as possible and only as long as necessary. 
                         We will reply to every enquiry after three working days at the latest 
                         in order to discuss the further procedure with you. 
@@ -105,7 +107,7 @@
             </div>
         
             <footer class="flex h-24 w-full items-center justify-center text-zinc-400">
-                © 2IsCompany 2022
+                © 2022 2IsCompany 
             </footer>
           
 
