--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 
             <div class="flex flex-col items-center w-full text-center pt-20 pb-20">
                 <h1 class="font-silk text-6xl md:w-4/6 md:text-8xl lg:w-2/6 lg:text-8xl">
-                    Welcome to BotShop!
+                    Welcome to BotFabrik!
                 </h1>
                 <!--<h2 class="text-3xl">Custom Telegram Bots for your community !</h2>-->
             </div>
 
             
 
-            <div class="flex flex-col justify-center items-center w-full md:h-80 font-jost text-left text-slate-50 pt-16 pb-16 lg:pt-32 lg:pb-32 bg-orange-400">
+            <div class="flex flex-col justify-center items-center w-full md:h-80 font-jost text-left text-slate-50 pt-16 pb-16 lg:pt-32 lg:pb-32 bg-orange-500">
                     <h2 class="w-5/6 md:w-4/6 lg:w-3/6 text-4xl md:text-5xl lg:text-6xl">
                         Bots for Telegram and Discord - 
                         made in Germany and made to measure !
