--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
 
 
-            <div class="flex flex-col items-center text-left w-full pt-14 pb-14 lg:pt-24 lg:pb-24">
+            <div class="flex flex-col items-center text-left w-full pt-14 pb-14 lg:pt-24 lg:pb-24 bg-orange-400">
 
                 <div class="flex w-5/6 md:w-4/6 lg:w-2/6">
                     <h2 class="text-3xl md:text-4xl lg:text-5xl">
