a few color changes

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 </form>
             </div>
         
-            <footer class="flex h-24 w-full items-center justify-center">
+            <footer class="flex h-24 w-full items-center justify-center bg-slate-50">
                 © 2022 2IsCompany 
             </footer>
         </div>
