--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
 
 
-            <div class="flex flex-col items-center text-left w-full pt-14 pb-14 lg:pt-24 lg:pb-24 bg-orange-400">
+            <div class="flex flex-col items-center text-left w-full pt-24 pb-24 lg:pt-24 lg:pb-24 bg-orange-400">
 
                 <div class="flex w-5/6 md:w-4/6 lg:w-2/6">
                     <h2 class="text-3xl md:text-4xl lg:text-5xl">
@@ -142,18 +142,20 @@
                     <!--<input type="hidden" name="_captcha" value="false">-->
                     <input type="hidden" name="_autoresponse" value="Thank you for your request ! It is of utmost importance to us to offer our customers the best possible service. We will therefore get back to you shortly; at the latest, however, after three working days. Please understand that we may have to decline your request due to high demand.">
 
-                    <div class="flex justify-center">
-                        <input class="w-full h-10 text-lg rounded p-4" type="text" name="name" placeholder="name" required>
+                    <div class="flex flex-col justify-center mt-4">
+                        <label>Name</label>
+                        <input class="w-full h-12 text-base rounded p-4 mt-2" type="text" name="name" placeholder="John Doe" required>
                     </div>
 
-                    <div class="flex justify-center">
-                        <input class="w-full h-10 text-lg rounded p-4 mt-4" type="email" name="email" placeholder="email" required>
+                    <div class="flex flex-col justify-center mt-4">
+                        <label>E-Mail</label>
+                        <input class="w-full h-12 text-base rounded p-4 mt-2" type="email" name="email" placeholder="john.doe@mailbox.com" required>
                     </div>
                     
 
                     <div class="flex flex-col justify-center mt-4">
-                        <label>Select a platform</label>
-                        <select class="w-full  text-lg rounded p-4 mt-2">
+                        <label>Platform</label>
+                        <select class="w-full h-12 text-base rounded p-4 mt-2">
                             <option value="Telegram">Telegram</option>
                             <option value="Telegram">Discord</option>
                         </select>
@@ -161,12 +163,13 @@
                     </div>
 
 
-                    <div class="flex justify-center">
-                        <textarea class="w-full h-60 text-lg rounded p-4 resize-y border mt-4" name="project-description" placeholder="Describe your project !" required></textarea>
+                    <div class="flex flex-col justify-center mt-4">
+                        <label>Project Description</label>
+                        <textarea class="w-full h-60 text-base rounded p-4 resize-y border mt-2" name="project-description" placeholder="Describe your project !" required></textarea>
                     </div>
 
                     <div class="flex justify-center">
-                        <button class="w-full h-10 rounded bg-slate-900 text-slate-100 text-lg font-bold mt-8" type="submit">
+                        <button class="w-full h-12 rounded bg-slate-900 text-slate-100 text-base font-bold mt-8" type="submit">
                         Send your message !
                         </button>
                     </div>
