--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
                 <!--heading inhalt eingerückt-->
                 <div class="w-5/6 md:w-4/6">
                     <div class="flex">
-                        <img class="w-10" src="logo.svg" alt="logo">
+                        <!--<img class="w-10" src="logo.svg" alt="logo">-->
+                        <h2 class="font-silk">Botfabrik</h2>
                     </div>
                     <div class="pt-24 text-slate-200">
                         <h1 class="text-4xl md:text-5xl">
@@ -60,7 +61,7 @@
 
             <!-- KUNDEN LOGOS CONTAINER VOLL-->
             <div class="flex flex-col items-center w-full pb-16 pt-16 bg-cyan-500">
-                <img class="w-40 pt-6" src="./cms.webp">
+                <!--<img class="w-40 pt-6" src="./cms.webp">-->
             </div>
 
 
@@ -228,8 +229,7 @@
             <footer class="flex flex-col w-full items-center justify-center pt-96 pb-6 text-slate-400 ">
                 <div class="flex flex-col items-center font-ptsans text-sm pb-12">
                     <div class="flex flex-col items-center">
-                        <a class="pt-2"" href="">Jobs</a>
-                        <a class="pt-2"" href="">Impressum</a>
+                        <a class="pt-2"" href="">legal</a>
                     </div>
                     <div class="text-sm pt-8">
                         © 2022 2IsCompany
